...
  // the list in ../../test_driver/transitions_perf_test.dart
  final List<GalleryItem> galleryItems = <GalleryItem>[
    // Demos
    GalleryItem(
      title: 'Shrine',
      subtitle: 'Basic shopping app',
      category: 'Vignettes',
      routeName: ShrineDemo.routeName,
      buildRoute: (BuildContext context) => ShrineDemo(),
    ),
    GalleryItem(
      title: 'Contact profile',
      subtitle: 'Address book entry with a flexible appbar',
...
      buildRoute: (BuildContext context) => ImagesDemo(),
    ),
    // Styles
    GalleryItem(
      title: 'Colors',
      subtitle: 'All of the predefined colors',
      category: 'Style',
      routeName: ColorsDemo.routeName,
      buildRoute: (BuildContext context) => ColorsDemo(),
    ),
    GalleryItem(
      title: 'Typography',
      subtitle: 'All of the predefined text styles',
...
